force-app/main/default/objects/Cloud_News__e/Cloud_News__e.object-meta.xml
<CustomObject>
    <description>Eventos de Cloud News para acceder a las últimas noticias al instante</description>
    <label>Cloud News</label>
    <pluralLabel>Cloud News</pluralLabel>
</CustomObject>