force-app/main/default/objects/Cloud_News__e/fields/Contenido_de_noticias__c.field-meta.xml
<CustomField>
    <fullName>Contenido_de_noticias__c</fullName>
    <label>Contenido de noticias</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>