force-app/main/default/objects/Cloud_News__e/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <label>Ubicacion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>