force-app/main/default/objects/Cloud_News__e/fields/Urgente__c.field-meta.xml
<CustomField>
    <fullName>Urgente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgente</label>
    <type>Checkbox</type>
</CustomField>